Add retry queue system, Google Sheets integration, and backup system
- Added retry_queue_manager.py for handling blocked/skipped products
- Integrated Google Sheets automatic upload on scraper shutdown
- Enhanced backup system with timestamped backups
- Removed two-computer scraping setup files
- Added google_sheets_uploader.py module for better organization
- Fixed indentation errors in base_scraper.py
- Products are automatically retried after main scraping completes

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,13 @@ walmart_scraped_products_*.json
 product_search_*.json
 test_product_details.json
 
+# Backups
+backups/
+*.backup
+
+# Retry queue
+retry_queue.json
+
 # Credentials and tokens
 walmart-scraper-project-*.json
 client_secret_*.json
